<resources>
    <string name="app_name">TestTaskEffectiveMobile</string>
    <string name="conditions_of_program_loyality_text"><u>условия программы лояльности</u></string>
    <string name="logining_text">Вход</string>
    <string name="login_text">Войти</string>
    <string name="surname_text">Фамилия</string>
    <string name="name_text">Имя</string>
    <string name="phone_number_text">Номер телефона</string>
    <string name="pressing_button_text">Нажимая кнопку “Войти”, Вы принимаете</string>
    <string name="home_text">Главная</string>
    <string name="catalog_text">Каталог</string>
    <string name="bag_text">Корзина</string>
    <string name="discount_text">Акции</string>
    <string name="profile_text">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_by_increasing">По возрастанию</string>
    <string name="filter_text">Фильтры</string>
    <string name="price_format_text" formatted="true">%s %s</string>
    <string name="discount_format_text" formatted="true">-%d%%</string>
    <string name="feedback_format_text" formatted="true">(%d)</string>
    <string name="by_populate">По популярности</string>
    <string name="by_increasing_price">По увеличению цены</string>
    <string name="by_reducing_price">По уменьшению цены</string>
    <string name="back">Назад</string>
    <string name="send">Отправить</string>
    <string name="description_text">Описание</string>
    <string name="behaviours_text">Характеристики</string>
    <string name="consist_text">Состав</string>
    <string name="add_to_bag_text">Добавить в корзину</string>
    <string name="more_details_text">Подробнее</string>
    <string name="disappear_text">Скрыть</string>
    <string name="personal_area">Личный кабинет</string>
    <string name="favorite_text">Избранное</string>
    <string name="shops_text">Магазины</string>
    <string name="return_product_text">Возврат товара</string>
    <string name="offer_text">Оферта</string>
    <string name="feedback_text">Обратная связь</string>
    <string name="logout_text">Выйти</string>
    <string name="goods_text">Товары</string>
    <string name="brands_text">Бренды</string>
</resources>