<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.login.LoginActivity">

    <TextView
        style="@style/Widget.App.TextView.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/logining_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/name_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/controls_pl"
            android:orientation="horizontal"
            android:addStatesFromChildren="true"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                style="@style/Widget.App.EditText"
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:hint="@string/name_text"
                android:layout_marginStart="16dp"
                android:selectAllOnFocus="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/name_close_button"
                style="@style/Widget.App.IconButton.CloseButton.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:icon="@drawable/type_big_close__state_default" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/surname_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/controls_pl"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                style="@style/Widget.App.EditText"
                android:id="@+id/surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:selectAllOnFocus="true"
                android:layout_marginStart="16dp"
                android:inputType="text"
                android:hint="@string/surname_text"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/surname_close_button"
                style="@style/Widget.App.IconButton.CloseButton.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:icon="@drawable/type_big_close__state_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/controls_pl"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.vicmikhailau.maskededittext.MaskedEditText
                style="@style/Widget.App.EditText"
                android:id="@+id/phone_number"
                app:mask="+7 ### ###-##-##"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:selectAllOnFocus="true"
                android:inputType="phone"
                android:hint="@string/phone_number_text"
                android:layout_marginStart="16dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/phone_number_close_button"
                style="@style/Widget.App.IconButton.CloseButton.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:icon="@drawable/type_big_close__state_default"
                />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            style="@style/Widget.App.Button.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:background="@drawable/button_big"
            android:text="@string/login_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number" />
    </LinearLayout>

    <TextView
        style="@style/Widget.App.TextView.Caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/conditions_of_loyalty_program_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/grey"
        android:text="@string/pressing_button_text"
        />
    <TextView
        style="@style/Widget.App.TextView.Caption1"
        android:id="@+id/conditions_of_loyalty_program_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="false"
        android:text="@string/conditions_of_program_loyality_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>