<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/personal_area_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/personal_area"
        android:textAppearance="@style/TextAppearance.App.Title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/personal_area_text_view">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/personal_area_button"
                style="@style/Widget.App.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/controls_pl"
                android:drawableLeft="@drawable/type_account__state_default"
                android:gravity="start"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:textAppearance="@style/TextAppearance.App.Title2"
                app:backgroundTint="@null"
                app:iconGravity="start"
                app:iconPadding="16dp"
                tools:text="Марина Иванова" />

            <TextView
                android:id="@+id/phone_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/personal_area_button"
                android:layout_marginStart="48dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.App.Caption1"
                android:textColor="@color/grey"
                tools:text="+ 7 993 877 44 02" />
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.App.IconButton.LikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/icon_logout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/favorite_button"
                style="@style/Widget.App.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/controls_pl"
                android:drawableLeft="@drawable/type_heart__state_default"
                android:drawableRight="@drawable/type_right_arrow__state_default"
                android:gravity="start"
                android:paddingEnd="8dp"
                android:paddingTop="8dp"
                android:text="@string/favorite_text"
                android:textAppearance="@style/TextAppearance.App.Title2"
                app:backgroundTint="@null"
                app:iconPadding="16dp" />

            <TextView
                android:id="@+id/count_favorite_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/favorite_button"

                android:layout_marginStart="48dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.App.Caption1"
                android:textColor="@color/grey"
                tools:text="1 товар" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shops_button"
            style="@style/Widget.App.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/controls_pl"
            android:drawableLeft="@drawable/type_shop__state_default"
            android:drawableRight="@drawable/type_right_arrow__state_default"
            android:gravity="start|center_vertical"
            android:paddingEnd="8dp"

            android:text="@string/shops_text"
            android:textAppearance="@style/TextAppearance.App.Title2"
            app:backgroundTint="@null"
            app:iconPadding="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/feedback_button"
            style="@style/Widget.App.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/controls_pl"
            android:drawableLeft="@drawable/type_feedback__state_default"
            android:drawableRight="@drawable/type_right_arrow__state_default"
            android:gravity="start|center_vertical"
            android:paddingEnd="8dp"
            android:text="@string/feedback_text"
            android:textAppearance="@style/TextAppearance.App.Title2"
            app:backgroundTint="@null"
            app:iconPadding="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/offer_button"
            style="@style/Widget.App.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/controls_pl"
            android:drawableLeft="@drawable/type_offer__state_default"
            android:drawableRight="@drawable/type_right_arrow__state_default"
            android:gravity="start|center_vertical"
            android:paddingEnd="8dp"
            android:text="@string/offer_text"
            android:textAppearance="@style/TextAppearance.App.Title2"
            app:backgroundTint="@null"
            app:iconPadding="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/return_product_button"
            style="@style/Widget.App.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/controls_pl"
            android:drawableLeft="@drawable/type_refund__state_default"
            android:drawableRight="@drawable/type_right_arrow__state_default"
            android:gravity="start|center_vertical"
            android:paddingEnd="8dp"
            android:text="@string/return_product_text"
            android:textAppearance="@style/TextAppearance.App.Title2"
            app:backgroundTint="@null"
            app:iconPadding="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/logout"
        style="@style/Widget.App.Button.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="32dp"
        android:background="@drawable/controls_pl"
        android:text="@string/logout_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>