<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    tools:context=".fragment.CatalogFragment">
    <TextView
        android:id="@+id/catalog_text_view"
        android:textAppearance="@style/TextAppearance.App.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/catalog_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/sort_and_filter_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catalog_text_view">
        <ImageView
            android:id="@+id/sort_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/type_sort_by__state_default"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sort_button"
            style="@style/Widget.App.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/sort_image_view"
            android:layout_centerVertical="true"
            android:text="@string/sort_by_increasing"
            app:icon="@drawable/type_down_arrow__state_default"
            app:iconGravity="end" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_button"
            style="@style/Widget.App.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingRight="4dp"
            android:text="@string/filter_text"
            app:icon="@drawable/type_filter__state_default" />
    </RelativeLayout>
    <HorizontalScrollView
        android:id="@+id/chip_group_horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_and_filter_button_layout">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true">

            <!-- Chips can be declared here, or added dynamically. -->

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_horizontal_scroll_view"
        app:spanCount="2"
        tools:itemCount="15"
        tools:listitem="@layout/item_product" />

</androidx.constraintlayout.widget.ConstraintLayout>